--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>EPAYMENT - THANH TOAN DIEN TU</title>
+        <title>Login Template CSharp</title>
         <base href="/">
 
         <meta charset="utf-8">
